--- a/compose.yaml
+++ b/compose.yaml
@@ -7,7 +7,7 @@ services:
       traefik.http.routers.traefik.tls: true
       traefik.http.routers.traefik.entrypoints: websecure
       traefik.http.routers.traefik.service: "api@internal"
-      traefik.http.routers.traefik.rule: "Host(`traefik.phpcon-dev.pl`)"
+      traefik.http.routers.traefik.rule: "Host(`traefik.opcode.ovh`)"
     networks:
       default: ~
       phpcon-dev: ~
