--- a/configs/certs.toml
+++ b/configs/certs.toml
@@ -1,10 +1,10 @@
 [[tls.certificates]]
-certFile = "/etc/ssl/phpcon-dev.pl.crt"
-keyFile = "/etc/ssl/phpcon-dev.pl.key"
+certFile = "/etc/ssl/opcode.ovh.crt"
+keyFile = "/etc/ssl/opcode.ovh.key"
 stores = ["default"]
 
 [tls.stores]
 [tls.stores.default]
 [tls.stores.default.defaultCertificate]
-certFile = "/etc/ssl/phpcon-dev.pl.crt"
-keyFile = "/etc/ssl/phpcon-dev.pl.key"
+certFile = "/etc/ssl/opcode.ovh.crt"
+keyFile = "/etc/ssl/opcode.ovh.key"
